# rust-esp32-example

components/rustlib/: CMakeLists.txt  Cargo.toml
components/rustlib/src/: lib.rs  stddemo.rs
main/: main.c
